# denovo-benchmarks-runner

./: .gitignore  .pre-commit-config.yaml  README.md  build_prefect_container.sh  config.yaml  deploy.py  orchestrate.py  prefect.def  pyproject.toml  run_deployment_worker.sh  run_deployment_worker_bare.sh  run_prefect_server.sh  stop_prefect_server.sh
.github/workflows/: lint.yml  tests.yml
container_overrides/casanovo/5.0.0/: container.def
runner/: __init__.py  alexandria.py  algorithm_runner.py  algorithms.py  build_state.py  container_builder.py  dataset_manager.py  display.py  git_ops.py  job_waiter.py  remote_fs.py
templates/: augment_output.slurm.sh  build_container.slurm.sh  evaluate_dataset.slurm.sh  pull_dataset.slurm.sh  run_algorithm.slurm.sh
tests/integration/: test_pipeline.py
tests/test_datasets/: README.md
tests/test_datasets/all_results_ready/alexandria/mock/containers/adanovo/bm-1.0.0/: container.sif
tests/test_datasets/all_results_ready/alexandria/mock/containers/evaluation/: evaluation.sif
tests/test_datasets/all_results_ready/expected_git/results/test_dataset_human/: AA_precision_plot_data.csv  RT_difference_plot_data.csv  number_of_proteome_matches_plot_data.csv
tests/test_datasets/all_results_ready/git/results/test_dataset_human/: SA_plot_data.csv  metrics.csv  peptide_precision_plot_data.csv
tests/test_datasets/fresh_start/expected_git/results/test_dataset_human/: peptide_precision_plot_data.csv
tests/unit/: test_algorithm_runner.py
(+4 files in other folders)
